tests/variant_flow/structured/structured_switch_duplicate_arm_at_terminator_span.err.expected
error: at 5:17: [VF-SwitchDuplicateArm] In function 'f', block 'entry': switchEnum has duplicate arm for variant 'None'
   |
 5 |                 switchEnum(o) [None: a, None: b, Some: c]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
